--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -17369,6 +17369,17 @@ input:focus {
   z-index: 999;
 }
 
+.sidebar .nav .nav-item .nav-link .settle{
+	background-color: #4CAF50;
+	border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
 .sidebar .nav .nav-item .nav-link {
   display: -webkit-flex;
   display: flex;
