dynamically added settlement funda using JQuery

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -17373,11 +17373,16 @@ input:focus {
 	background-color: #4CAF50;
 	border: none;
     color: white;
-    padding: 15px 32px;
+    /* padding: 15px 32px; */
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    
+}
+
+.sidebar .nav .nav-item .settleList{
+	color: #9CCB70;
 }
 
 .sidebar .nav .nav-item .nav-link {
